--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>Undangan Pernikahan Fendik & Amanda</title>
   <link rel="stylesheet" href="style.css">
 </head>
+  <div class="opening">
+  <div class="card">
+    <p>The Wedding Of</p>
+    <h1>Fendik & Amanda</h1>
+    <p>Selasa, 7 Oktober 2025 | 08:00 WIB - Selesai</p>
+    <p>Kepada Yth. Bapak/Ibu/Saudara/i</p>
+    <h2 id="namaTamu">Tamu Undangan</h2>
+    <button onclick="bukaUndangan()">Buka Undangan →</button>
+  </div>
+</div>
 <body>
   <audio id="bgm" src="audio/backsound.mp3" autoplay loop></audio>
   <div class="container">
