--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
                     <ul class="mt-3">
                         <li><a href="https://instagram.com/fendikagus_"><i class="bi bi-instagram"></i></a></li>
-                        ,<li><a href="http://wa.me/6283892917327"><i class="bi bi-whatsapp"></i></i></a></li>
+                        <li><a href="http://wa.me/6283892917327"><i class="bi bi-whatsapp"></i></i></a></li>
                         <li><a href="https://t.me/fendikagus"><i class="bi bi-telegram"></i></a></li>
                         <li><a href="https://github.com/fendikagus"><i class="bi bi-github"></i></a></li>
                     </ul>
