--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
                     <p class="alamat">Alamat : Jalan Kolonel Sugiono Gg 7 RT. 05/RW.01 No. 42
                         Mergosono Kota Malang</p>
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d293.6681937287956!2d112.59553405964796!3d-7.987316963443443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7882c13049d841%3A0xa545abc10ceba725!2sMulyorejo%2C%20Kec.
-                        %20Sukun%2C%20Kota%20Malang%2C%20Jawa%20Timur!5e0!3m2!1sid!2sid!4v1751182852341!5m2!1sid!2sid"
-                        width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3951.0351511264125!2d112.
+                        634914!3d-7.9953069999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+                        1!3m2!1m1!2zN8KwNTknNDMuMSJTIDExMsKwMzgnMDUuNyJF!5e0!3m2!1sid!2sid!4v1751191594504!5m2!1sid!2sid" 
+                        width="600" height="450" style="border:0;" 
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-                    <a href="https://maps.app.goo.gl/Jf2AcMpMC8weKvGKA" target="_blank"
+                    <a href="https://maps.app.goo.gl/dfzHajRW7v3hGNHm8" target="_blank"
                         class="btn btn-light btn-sm my-4">Klik Untuk Melihat Lokasi</a>
                     <p class="description">Diharapkan untuk tidak salah alamat dan tanggal.
                         Manakala tiba ditujuan namun tidak ada tanda tanda sedang dilaksanakan pernikahan
