--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
     <nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
         <div class="container">
             <a class="navbar-brand" href="#">Amastyo</a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -121,7 +118,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3951.0351511264125!2d112.
                         634914!3d-7.9953069999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
                         1!3m2!1m1!2zN8KwNTknNDMuMSJTIDExMsKwMzgnMDUuNyJF!5e0!3m2!1sid!2sid!4v1751191594504!5m2!1sid!2sid" 
-                        width="600" height="450" style="border:0;" 
+                        width="100%" height="250" style="border:0;" 
                         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                     <a href="https://maps.app.goo.gl/dfzHajRW7v3hGNHm8" target="_blank"
